--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,5 +1,15 @@
 <div id='container'>
 <!-- Your code here -->
+  <button><a href='./#/links'>Go to Links </a></button>
+  <input input type='text'ng-model='link.url'>
+
+  <button ng-click="addLink(link.url)">Submit Link</button>
+
+  {{ submitLink }}
+
+  <div>
+    <!-- {{ data }} -->
+  </div>
 
 </div>
 
